--- a/register.html
+++ b/register.html
@@ -158,15 +158,16 @@
 
       <!-- REQUIRED Netlify hidden inputs -->
       <input type="hidden" name="form-name" value="registration">
-      <input type="hidden" name="*redirect" value="/success.html">
+      <input type="hidden" name="netlify-redirect" value="/success.html">
 
       <!-- Parent email -->
       <label for="parentEmail">Parent's Email Address:</label>
-      <input type="email" id="parentEmail" name="email" required>
+      <input type="email" id="parentEmail" name="parentEmail" required>
 
       <!-- Child Information -->
       <fieldset>
         <legend>Child Information</legend>
+
         <label for="childSurname">Surname:</label>
         <input type="text" id="childSurname" name="childSurname" required>
 
@@ -182,9 +183,9 @@
         <label for="gender">Gender:</label>
         <select id="gender" name="gender" required>
           <option value="">-- Please choose --</option>
-          <option value="female">Female</option>
-          <option value="male">Male</option>
-          <option value="other">Other</option>
+          <option value="Female">Female</option>
+          <option value="Male">Male</option>
+          <option value="Other">Other</option>
         </select>
 
         <label for="address">Residential Address:</label>
@@ -193,15 +194,16 @@
         <label for="class">Select Class:</label>
         <select id="class" name="class" required>
           <option value="">-- Please choose --</option>
-          <option value="baby">🐞 Baby Class (Ladybug) – 0 to 2 Years</option>
-          <option value="toddler">🦋 Toddler Class (Butterfly) – 2 to 3 Years</option>
-          <option value="elephant">🐘 Elephant Class – 3 to 6 Years</option>
+          <option value="Baby Class – 0 to 2 Years">🐞 Baby Class (Ladybug) – 0 to 2 Years</option>
+          <option value="Toddler Class – 2 to 3 Years">🦋 Toddler Class (Butterfly) – 2 to 3 Years</option>
+          <option value="Elephant Class – 3 to 6 Years">🐘 Elephant Class – 3 to 6 Years</option>
         </select>
       </fieldset>
 
       <!-- Mother's Information -->
       <fieldset>
         <legend>Mother's Information</legend>
+
         <label for="motherSurname">Surname:</label>
         <input type="text" id="motherSurname" name="motherSurname" required>
 
@@ -224,6 +226,7 @@
       <!-- Father's Information -->
       <fieldset>
         <legend>Father's Information</legend>
+
         <label for="fatherSurname">Surname:</label>
         <input type="text" id="fatherSurname" name="fatherSurname" required>
 
@@ -246,6 +249,7 @@
       <!-- Responsible Person -->
       <fieldset>
         <legend>Responsible Person for Fetching the Child</legend>
+
         <label for="responsibleSurname">Surname:</label>
         <input type="text" id="responsibleSurname" name="responsibleSurname" required>
 
@@ -253,7 +257,7 @@
         <input type="text" id="responsibleFullName" name="responsibleFullName" required>
 
         <label for="responsibleRelation">Relationship to the Child:</label>
-        <input type="text" id="responsibleRelation" name="responsibleRelation" placeholder="e.g., Mother, Uncle, Guardian" required>
+        <input type="text" id="responsibleRelation" name="responsibleRelation" required>
       </fieldset>
 
       <!-- Uploads -->
