Restore and format register.html structure
Restored and formatted the HTML structure for the registration page, including styles and form elements.

--- a/register.html
+++ b/register.html
@@ -158,7 +158,7 @@
 
       <!-- REQUIRED Netlify hidden inputs -->
       <input type="hidden" name="form-name" value="registration">
-      <input type="hidden" name="netlify-redirect" value="/success.html">
+      <input type="hidden" name="*redirect" value="/success.html">
 
       <!-- Parent email -->
       <label for="parentEmail">Parent's Email Address:</label>
